# cslice

./: CMakeLists.txt  LICENSE.md  README.md
lib/include/cslice/: cslice.h  slice.h
lib/src/cslice/: cslice.c  slice.c
